# App1Borrador

./: Analisis.cpp  Analisis.h  Analisis1.cpp  Analisis1.h  Analisis2.cpp  Analisis2.h  Analisis3.cpp  Analisis3.h  App1Facade.cpp  App1Facade.h  App2Facade.cpp  App2Facade.h  Binario.cpp  Binario.h  CMakeLists.txt  CSV.cpp  CSV.h  Enfermedad.cpp  Enfermedad.h  EnfermedadConteo.h  EnfermedadPacientes.cpp  EnfermedadPacientes.h  EnfermedadesManager.cpp  EnfermedadesManager.h  ILoad.cpp  ILoad.h  ISave.cpp  ISave.h  JSON.cpp  JSON.h  Menu.cpp  Menu.h  Paciente.cpp  Paciente.h  PacienteAnalizado.cpp  PacienteAnalizado.h  PacienteAnalizadoManager.cpp  PacienteAnalizadoManager.h  PacientesAnalizadosManager.cpp  PacientesAnalizadosManager.h  (+5 more)
